--- a/.companion.rc
+++ b/.companion.rc
@@ -22,11 +22,11 @@ if [ ! -f /home/pi/.updating ]; then
 	sudo -H -u pi screen -dm -S mavproxy $COMPANION_DIR/tools/telem.py
 	sudo -H -u pi screen -dm -S video $COMPANION_DIR/tools/streamer.py 
 	sudo -H -u pi screen -dm -S webui $COMPANION_DIR/scripts/start_webui.sh
-	sudo -H -u pi screen -dm -S webterminal $COMPANION_DIR/scripts/start_webterminal.sh
+#	sudo -H -u pi screen -dm -S webterminal $COMPANION_DIR/scripts/start_webterminal.sh
 	sudo -H -u pi screen -dm -S commrouter $COMPANION_DIR/tools/comm_router.py
 	sudo -H -u pi screen -dm -S audio $COMPANION_DIR/tools/audio.py
 	sudo -H -u pi screen -dm -S file-manager node --harmony $COMPANION_DIR/br-webui/node_modules/node-file-manager/lib/index.js -p 7777 -d /
-	sudo -H -u pi screen -dm -S nmearx $COMPANION_DIR/tools/nmea-receiver.py
+#	sudo -H -u pi screen -dm -S nmearx $COMPANION_DIR/tools/nmea-receiver.py
 	sudo -H -u pi screen -dm -S wldriver $COMPANION_DIR/tools/underwater-gps.py --ip=192.168.2.94 --port=80
 else
 	sudo -H -u pi echo 'UPDATE FAILED!' >> /home/pi/.update_log
